# business-ai-agent

./: .env.example  .gitignore  INSTRUCTIONS.md  LICENSE  README.md  SYSTEM_ARCHITECTURE.md  debug.py  debug_out.txt  main.py  push_log.txt  pyproject.toml  pytest_out.txt  pytest_out2.txt  requirements.txt  scout_res.json  scout_res_utf8.json  test_error.py
app/: __init__.py  main.py
app/agent/: __init__.py  agent.py  candidates.py
app/models/: __init__.py  schemas.py
app/routes/: __init__.py  router.py
app/static/: index.html
app/tools/: __init__.py  census_data.py  competitors.py  google_maps.py  krisha.py  rent.py  rent_usa.py  report.py  scoring.py  traffic.py  workers.py
data/: rent_data.csv  users.db
tests/: test_agent.py
